@@ -33,134 +33,161 @@ import static org.mockito.Mockito.*;
 @DisplayName("PrescriptionService Unit Tests")
 class PrescriptionServiceImplTest {
 
-    @Mock
-    private PrescriptionRepository prescriptionRepository;
+  @Mock
+  private PrescriptionRepository prescriptionRepository;
 
-    @Mock
-    private PatientService patientService;
+  @Mock
+  private PatientService patientService;
 
-    @Mock
-    private AppointmentService appointmentService;
+  @Mock
+  private AppointmentService appointmentService;
 
-    @Mock
-    private AppointmentRepository appointmentRepository;
+  @Mock
+  private AppointmentRepository appointmentRepository;
 
-    @InjectMocks
-    private PrescriptionServiceImpl prescriptionService;
+  @Mock
+  private com.care.medi.repository.MedicationRepository medicationRepository;
 
-    private PrescriptionRequestDTO requestDTO;
-    private Prescription testPrescription;
-    private PrescriptionResponseDTO responseDTO;
-    private Appointment testAppointment;
+  @InjectMocks
+  private PrescriptionServiceImpl prescriptionService;
 
-    @BeforeEach
-    void setUp() {
-        requestDTO = new PrescriptionRequestDTO();
-        requestDTO.setAppointmentId(1L);
-        requestDTO.setPatientId(1L);
-        requestDTO.setDoctorId(1L);
-        requestDTO.setMedications("Paracetamol");
+  private PrescriptionRequestDTO requestDTO;
+  private Prescription testPrescription;
+  private PrescriptionResponseDTO responseDTO;
+  private Appointment testAppointment;
 
-        testAppointment = new Appointment();
-        testAppointment.setId(1L);
-        testAppointment.setStatus(AppointmentStatus.SCHEDULED);
-        Patient patient = new Patient();
-        patient.setId(1L);
-        testAppointment.setPatient(patient);
+  @BeforeEach
+  void setUp() {
+    requestDTO = new PrescriptionRequestDTO();
+    requestDTO.setAppointmentId(1L);
+    requestDTO.setPatientId(1L);
+    requestDTO.setDoctorId(1L);
+    com.care.medi.dtos.request.PrescriptionItemRequestDTO itemDTO = new com.care.medi.dtos.request.PrescriptionItemRequestDTO();
+    itemDTO.setMedicationId(1L);
+    itemDTO.setDosageInstructions("Paracetamol");
+    requestDTO.setItems(java.util.Collections.singletonList(itemDTO));
 
-        testPrescription = new Prescription();
-        testPrescription.setId(1L);
-        testPrescription.setAppointment(testAppointment);
-        testPrescription.setMedications("Paracetamol");
+    testAppointment = new Appointment();
+    testAppointment.setId(1L);
+    testAppointment.setStatus(AppointmentStatus.SCHEDULED);
+    Patient patient = new Patient();
+    patient.setId(1L);
+    patient.setFirstName("John");
+    patient.setLastName("Doe");
+    testAppointment.setPatient(patient);
 
-        responseDTO = PrescriptionResponseDTO.builder()
-                .id(1L)
-                .medications("Paracetamol")
-                .build();
-    }
+    com.care.medi.entity.Doctor doctor = new com.care.medi.entity.Doctor();
+    doctor.setId(1L);
+    doctor.setFirstName("Dr.");
+    doctor.setLastName("Smith");
 
-    @Test
-    @DisplayName("Should get prescription by patient id")
-    void testGetPrescriptionByPatientId() {
-        when(patientService.existsByIdAndHospitalId(1L, 1L)).thenReturn(true);
+    testPrescription = new Prescription();
+    testPrescription.setId(1L);
+    testPrescription.setAppointment(testAppointment);
+    testPrescription.setPatient(patient);
+    testPrescription.setDoctor(doctor);
+    com.care.medi.entity.Medication med = new com.care.medi.entity.Medication();
+    med.setId(1L);
+    med.setName("Paracetamol");
+    com.care.medi.entity.PrescriptionItem pItem = new com.care.medi.entity.PrescriptionItem();
+    pItem.setId(1L);
+    pItem.setMedication(med);
+    pItem.setPrescription(testPrescription);
+    testPrescription.getItems().add(pItem);
 
-        // Mock the Page response manually since method returns Page<PrescriptionResponseDTO> instead of Page<Prescription>
-        Page<PrescriptionResponseDTO> pageResponse = new PageImpl<>(List.of(responseDTO));
-        when(prescriptionRepository.findByPatientId(eq(1L), any(Pageable.class))).thenReturn(pageResponse);
+    com.care.medi.dtos.response.PrescriptionItemResponseDTO resItem = com.care.medi.dtos.response.PrescriptionItemResponseDTO.builder().id(1L).medicationName("Paracetamol").build();
+    responseDTO = PrescriptionResponseDTO.builder()
+      .id(1L)
+      .items(java.util.Collections.singletonList(resItem))
+      .build();
+  }
 
-        Page<PrescriptionResponseDTO> result = prescriptionService.getPrescriptionByPatientId(1L, 1L, 0, 10, "id");
+  @Test
+  @DisplayName("Should get prescription by patient id")
+  void testGetPrescriptionByPatientId() {
+    when(patientService.existsByIdAndHospitalId(1L, 1L)).thenReturn(true);
 
-        assertNotNull(result);
-        assertEquals(1, result.getTotalElements());
-        verify(patientService).existsByIdAndHospitalId(1L, 1L);
-    }
+    // Mock the Page response manually since method returns Page<PrescriptionResponseDTO> instead of Page<Prescription>
+    Page<Prescription> pageResponse = new PageImpl<>(List.of(testPrescription));
+    when(prescriptionRepository.findByPatientId(eq(1L), any(Pageable.class))).thenReturn(pageResponse);
 
-    @Test
-    @DisplayName("Should throw ResourceNotFoundException for invalid patient id")
-    void testGetPrescriptionByPatientId_NotFound() {
-        when(patientService.existsByIdAndHospitalId(1L, 1L)).thenReturn(false);
+    Page<PrescriptionResponseDTO> result = prescriptionService.getPrescriptionByPatientId(1L, 1L, 0, 10, "id");
 
-        assertThrows(ResourceNotFoundException.class, () -> prescriptionService.getPrescriptionByPatientId(1L, 1L, 0, 10, "id"));
-        verify(patientService).existsByIdAndHospitalId(1L, 1L);
-    }
+    assertNotNull(result);
+    assertEquals(1, result.getTotalElements());
+    verify(patientService).existsByIdAndHospitalId(1L, 1L);
+  }
 
-    @Test
-    @DisplayName("Should get prescription by appointment id")
-    void testGetPrescriptionByAppointmentId() {
-        when(appointmentService.existsByIdAndHospitalId(1L, 1L)).thenReturn(true);
-        Page<Prescription> page = new PageImpl<>(List.of(testPrescription));
-        when(prescriptionRepository.findByAppointmentId(eq(1L), any(Pageable.class))).thenReturn(page);
+  @Test
+  @DisplayName("Should throw ResourceNotFoundException for invalid patient id")
+  void testGetPrescriptionByPatientId_NotFound() {
+    when(patientService.existsByIdAndHospitalId(1L, 1L)).thenReturn(false);
 
-        Page<PrescriptionResponseDTO> result = prescriptionService.getPrescriptionByAppointmentId(1L, 1L, 0, 10, "id");
+    assertThrows(ResourceNotFoundException.class, () -> prescriptionService.getPrescriptionByPatientId(1L, 1L, 0, 10, "id"));
+    verify(patientService).existsByIdAndHospitalId(1L, 1L);
+  }
 
-        assertNotNull(result);
-        assertEquals(1, result.getTotalElements());
-        assertEquals("Paracetamol", result.getContent().get(0).medications());
-        verify(appointmentService).existsByIdAndHospitalId(1L, 1L);
-    }
+  @Test
+  @DisplayName("Should get prescription by appointment id")
+  void testGetPrescriptionByAppointmentId() {
+    when(appointmentService.existsByIdAndHospitalId(1L, 1L)).thenReturn(true);
+    Page<Prescription> page = new PageImpl<>(List.of(testPrescription));
+    when(prescriptionRepository.findByAppointmentId(eq(1L), any(Pageable.class))).thenReturn(page);
 
-    @Test
-    @DisplayName("Should throw ResourceNotFoundException for invalid appointment id")
-    void testGetPrescriptionByAppointmentId_NotFound() {
-        when(appointmentService.existsByIdAndHospitalId(1L, 1L)).thenReturn(false);
+    Page<PrescriptionResponseDTO> result = prescriptionService.getPrescriptionByAppointmentId(1L, 1L, 0, 10, "id");
 
-        assertThrows(ResourceNotFoundException.class, () -> prescriptionService.getPrescriptionByAppointmentId(1L, 1L, 0, 10, "id"));
-        verify(appointmentService).existsByIdAndHospitalId(1L, 1L);
-    }
+    assertNotNull(result);
+    assertEquals(1, result.getTotalElements());
+    assertEquals("Paracetamol", result.getContent().get(0).items().get(0).medicationName());
+    verify(appointmentService).existsByIdAndHospitalId(1L, 1L);
+  }
 
-    @Test
-    @DisplayName("Should assign prescription to appointment")
-    void testAssignPrescriptionToAppointment() {
-        when(appointmentService.isAppointmentContextValid(1L, 1L, 1L, 1L)).thenReturn(true);
-        when(appointmentRepository.findByIdAndStatusIn(eq(1L), anyList())).thenReturn(Optional.of(testAppointment));
-        when(prescriptionRepository.save(any(Prescription.class))).thenReturn(testPrescription);
-        // doNothing().when(appointmentService).updateAppointmentStatus(1L, AppointmentStatus.COMPLETED);
+  @Test
+  @DisplayName("Should throw ResourceNotFoundException for invalid appointment id")
+  void testGetPrescriptionByAppointmentId_NotFound() {
+    when(appointmentService.existsByIdAndHospitalId(1L, 1L)).thenReturn(false);
 
-        PrescriptionResponseDTO result = prescriptionService.assignPrescriptionToAppointment(1L, requestDTO);
+    assertThrows(ResourceNotFoundException.class, () -> prescriptionService.getPrescriptionByAppointmentId(1L, 1L, 0, 10, "id"));
+    verify(appointmentService).existsByIdAndHospitalId(1L, 1L);
+  }
 
-        assertNotNull(result);
-        assertEquals("Paracetamol", result.medications());
-        verify(appointmentService).isAppointmentContextValid(1L, 1L, 1L, 1L);
-        verify(appointmentRepository).findByIdAndStatusIn(eq(1L), anyList());
-        verify(prescriptionRepository).save(any(Prescription.class));
-        verify(appointmentService).updateAppointmentStatus(1L, AppointmentStatus.COMPLETED);
-    }
+  @Test
+  @DisplayName("Should assign prescription to appointment")
+  void testAssignPrescriptionToAppointment() {
+    com.care.medi.entity.Medication med = new com.care.medi.entity.Medication();
+    med.setId(1L);
+    med.setName("Paracetamol");
+    when(medicationRepository.findById(anyLong())).thenReturn(Optional.of(med));
+    when(appointmentService.isAppointmentContextValid(1L, 1L, 1L, 1L)).thenReturn(true);
+    when(appointmentRepository.findByIdAndStatusIn(eq(1L), anyList())).thenReturn(Optional.of(testAppointment));
+    when(prescriptionRepository.save(any(Prescription.class))).thenReturn(testPrescription);
+    // doNothing().when(appointmentService).updateAppointmentStatus(1L, AppointmentStatus.COMPLETED);
 
-    @Test
-    @DisplayName("Should throw InvalidRequestException for invalid appointment context")
-    void testAssignPrescriptionToAppointment_InvalidContext() {
-        when(appointmentService.isAppointmentContextValid(1L, 1L, 1L, 1L)).thenReturn(false);
+    PrescriptionResponseDTO result = prescriptionService.assignPrescriptionToAppointment(1L, requestDTO);
 
-        assertThrows(InvalidRequestException.class, () -> prescriptionService.assignPrescriptionToAppointment(1L, requestDTO));
-        verify(appointmentService).isAppointmentContextValid(1L, 1L, 1L, 1L);
-    }
+    assertNotNull(result);
+    assertEquals("Paracetamol", result.items().get(0).medicationName());
+    verify(appointmentService).isAppointmentContextValid(1L, 1L, 1L, 1L);
+    verify(appointmentRepository).findByIdAndStatusIn(eq(1L), anyList());
+    verify(prescriptionRepository).save(any(Prescription.class));
+    verify(appointmentService).updateAppointmentStatus(1L, AppointmentStatus.COMPLETED);
+  }
 
-    @Test
-    @DisplayName("Should throw ResourceNotFoundException when appointment not found for prescription")
-    void testAssignPrescriptionToAppointment_AppointmentNotFound() {
-        when(appointmentService.isAppointmentContextValid(1L, 1L, 1L, 1L)).thenReturn(true);
-        when(appointmentRepository.findByIdAndStatusIn(eq(1L), anyList())).thenReturn(Optional.empty());
+  @Test
+  @DisplayName("Should throw InvalidRequestException for invalid appointment context")
+  void testAssignPrescriptionToAppointment_InvalidContext() {
+    when(appointmentService.isAppointmentContextValid(1L, 1L, 1L, 1L)).thenReturn(false);
 
-        assertThrows(ResourceNotFoundException.class, () -> prescriptionService.assignPrescriptionToAppointment(1L, requestDTO));
-    }
+    assertThrows(InvalidRequestException.class, () -> prescriptionService.assignPrescriptionToAppointment(1L, requestDTO));
+    verify(appointmentService).isAppointmentContextValid(1L, 1L, 1L, 1L);
+  }
+
+  @Test
+  @DisplayName("Should throw ResourceNotFoundException when appointment not found for prescription")
+  void testAssignPrescriptionToAppointment_AppointmentNotFound() {
+    when(appointmentService.isAppointmentContextValid(1L, 1L, 1L, 1L)).thenReturn(true);
+    when(appointmentRepository.findByIdAndStatusIn(eq(1L), anyList())).thenReturn(Optional.empty());
+
+    assertThrows(ResourceNotFoundException.class, () -> prescriptionService.assignPrescriptionToAppointment(1L, requestDTO));
+  }
 }
